Add functionality to create decks.                                                                                                                   Change default non final fields in R classes in gradle.properties

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,16 +11,39 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Spaced"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
             android:name=".View.MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!--        Create Deck Activity-->
+        <activity
+            android:name=".View.CreateDeckActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="activity.CreateDeck" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <!--        Add Flashcard Activity-->
+        <activity
+            android:name=".View.AddFlashcardActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="activity.AddFlashcard" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
     </application>
 
 </manifest>
